<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="474dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/estudonautatopo" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnEquipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/cianoclaro"
                    android:onClick="clickEquipe"
                    android:text="@string/strEquipe"
                    android:textColor="@color/cianoescuro"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnCursos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/cianoclaro"
                    android:onClick="clickCursos"
                    android:text="@string/strCursos"
                    android:textColor="@color/cianoescuro"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnMidias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/cianoclaro"
                    android:onClick="clickMidia"
                    android:text="@string/strMidia"
                    android:textColor="@color/cianoescuro"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/srtDireitos"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>