<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Cursos">

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="clicarVoltar"
        android:text="@string/strBack"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/strTituloCursos"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgPortugol"
                android:layout_width="324dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="cursoPortugol"
                app:srcCompat="@drawable/cursoportugol" />

            <ImageView
                android:id="@+id/imgAndroid"
                android:layout_width="324dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="cursoAndroid"
                app:srcCompat="@drawable/cursoandroid" />

            <ImageView
                android:id="@+id/imgKotlin"
                android:layout_width="324dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="cursoKotlin"
                app:srcCompat="@drawable/cursokotlin" />

            <ImageView
                android:id="@+id/imgC"
                android:layout_width="324dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="cursoC"
                app:srcCompat="@drawable/cursolingc" />

            <ImageView
                android:id="@+id/imgCsharpp"
                android:layout_width="324dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="cursoCsharp"
                app:srcCompat="@drawable/cursolingcsharp" />

            <ImageView
                android:id="@+id/imgPhp"
                android:layout_width="324dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="cursoPhp"
                app:srcCompat="@drawable/cursophp" />

            <ImageView
                android:id="@+id/imgVideo"
                android:layout_width="324dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="cursoVideo"
                app:srcCompat="@drawable/cursovideo" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>